--- a/index.html
+++ b/index.html
@@ -1,72 +1,84 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Page Replacement Simulator</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Page Replacement Visualizer</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-white">
+<body>
+  <div class="wrap">
+    <header>
+      <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 24 24'%3E%3Cpath fill='%236c5ce7' d='M3 13h2v-2H3v2zm4 0h14v-2H7v2zM3 7h18V5H3v2zM3 19h8v-2H3v2z'/%3E%3C/svg%3E" alt="logo"/>
+      <div>
+        <h1>Page Replacement Visualizer</h1>
+        <div class="small">Reference-inspired layout — FIFO, LRU, Optimal with step-by-step and summary</div>
+      </div>
+    </header>
 
-  <div class="container py-4">
-    <h1 class="text-center mb-4 text-purple-dark">Page Replacement Simulator</h1>
+    <div class="grid">
+      <aside class="card">
+        <label>Reference string (comma or space separated)</label>
+        <input id="refs" type="text" />
 
-    <div class="row g-3">
-      <!-- Left Panel -->
-      <div class="col-lg-6">
-        <div class="card block p-3 bg-purple-card">
-          <h5 class="card-title bg-purple-heading p-2 rounded">Reference String</h5>
-          <input id="referenceString" class="form-control mb-2" placeholder="e.g., 7 0 1 2 0 3 0 4 2 3" />
-          <input id="frames" type="number" class="form-control mb-3" min="1" value="3" />
+        <label style="margin-top:10px">Frames</label>
+        <input id="frames" type="number" min="1" max="10" />
 
-          <!-- Algorithm Selection Buttons -->
-          <div class="mb-3 d-flex align-items-center">
-            <h6 class="me-3 mb-0">Select Algorithm:</h6>
-            <div id="algoButtons" class="d-flex gap-2">
-              <button type="button" class="btn btn-outline-primary rounded-pill" onclick="selectAlgorithm('FIFO')">FIFO</button>
-              <button type="button" class="btn btn-outline-primary rounded-pill" onclick="selectAlgorithm('LRU')">LRU</button>
-              <button type="button" class="btn btn-outline-primary rounded-pill" onclick="selectAlgorithm('Optimal')">Optimal</button>
-            </div>
+        <label style="margin-top:10px">Algorithm</label>
+        <select id="algo">
+          <option>FIFO</option>
+          <option selected>LRU</option>
+          <option>Optimal</option>
+        </select>
+
+        <div class="btn-row">
+          <button id="run">Run</button>
+          <button id="step">Step</button>
+          <button id="reset" style="background:#94a3b8">Reset</button>
+        </div>
+
+        <hr style="margin:12px 0;border:none;border-top:1px solid #eef2f7"/>
+        <div class="small">Process Table (visual reference only)</div>
+        <table style="margin-top:8px">
+          <thead><tr><th>Index</th><th>Page</th></tr></thead>
+          <tbody id="processTbl"></tbody>
+        </table>
+      </aside>
+
+      <main>
+        <div class="card">
+          <div style="display:flex;justify-content:space-between;align-items:center">
+            <div class="small">Timeline</div>
+            <div class="small muted" id="status">Ready</div>
           </div>
 
-          <div class="d-flex gap-2">
-            <button class="btn btn-primary flex-fill" onclick="runSimulation()">Run</button>
-            <button class="btn btn-secondary flex-fill" onclick="resetSimulation()">Reset</button>
-            <button class="btn btn-info flex-fill" onclick="compareAlgorithms()">Compare</button>
+          <div class="timeline" id="timelineArea"></div>
+
+          <div class="steps" id="stepsArea" style="margin-top:6px"></div>
+
+          <div class="metric-row" id="metrics"></div>
+        </div>
+
+        <div style="height:16px"></div>
+
+        <div class="card">
+          <div style="display:flex;justify-content:space-between;align-items:center">
+            <div class="small">Execution Summary</div>
+            <div class="small muted">Steps: <span id="totalSteps">0</span></div>
           </div>
+          <div id="summaryCards" style="display:flex;gap:12px;margin-top:12px"></div>
+
+          <hr style="margin:12px 0;border:none;border-top:1px solid #eef2f7"/>
+          <div class="small">Results table</div>
+          <table class="result-table" style="margin-top:8px">
+            <thead><tr><th>Step</th><th>Ref</th><th>Frames</th><th>Fault?</th></tr></thead>
+            <tbody id="resultsBody"></tbody>
+          </table>
         </div>
-      </div>
-
-      <!-- Right Panel -->
-      <div class="col-lg-6">
-        <div class="card block p-3 bg-purple-card">
-          <h5 class="card-title bg-purple-heading p-2 rounded">Execution Summary</h5>
-          <div id="executionSummary"></div>
-        </div>
-      </div>
+      </main>
     </div>
   </div>
 
-  <!-- Full-width Process Table -->
-  <div class="full-width-table mt-4 px-4 py-3">
-    <h5 id="processTableHeading" class="bg-purple-heading p-2 rounded" style="display:none;">Process Table</h5>
-    <div class="table-responsive">
-      <div id="processTable"></div>
-    </div>
-  </div>
-
-  <!-- Full-width Comparison Section -->
-  <div class="full-width-table mt-4 px-4 py-3" id="comparisonSection" style="display:none;">
-    <h5 class="bg-purple-heading p-2 rounded">Algorithm Comparison Summary</h5>
-    <div class="table-responsive">
-      <div id="comparisonResults"></div>
-    </div>
-  </div>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
